samples/_failures_safe/1761599695_1c6470_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fca2c8f7.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_fca2c8f7.c:182:5: error: expected identifier at end of input
  182 |     queue->
      |     ^~~~~
./samples/SAFE/__tmp_fca2c8f7.c:182:5: error: expected declaration or statement at end of input
